package keypointsserver

import (
	skp "github.com/sirfrank96/go-server/sports-keypoints-proto"
)

func verifyCreateUserRequest(request *skp.CreateUserRequest) error {
	return nil
}

func verifyRegisterUserRequest(request *skp.RegisterUserRequest) error {
	return nil
}

func verifyReadUserRequest(request *skp.ReadUserRequest) error {
	return nil
}

func verifyUpdateUserRequest(request *skp.UpdateUserRequest) error {
	return nil
}

func verifyDeleteUserRequest(request *skp.DeleteUserRequest) error {
	return nil
}

func verifyUploadInputImageRequest(request *skp.UploadInputImageRequest) error {
	return nil
}

func verifyListInputImagesForUserRequest(request *skp.ListInputImagesForUserRequest) error {
	return nil
}

func verifyReadInputImageRequest(request *skp.ReadInputImageRequest) error {
	return nil
}

func verifyDeleteInputImageRequest(request *skp.DeleteInputImageRequest) error {
	return nil
}

func verifyCalibrateInputImageRequest(request *skp.CalibrateInputImageRequest) error {
	return nil
}

func verifyCalculateGolfKeypointsRequest(request *skp.CalculateGolfKeypointsRequest) error {
	return nil
}

func verifyReadGolfKeypointsRequest(request *skp.ReadGolfKeypointsRequest) error {
	return nil
}

func verifyUpdateBodyKeypointsRequest(request *skp.UpdateBodyKeypointsRequest) error {
	return nil
}

func verifyDeleteGolfKeypointsRequest(request *skp.DeleteGolfKeypointsRequest) error {
	return nil
}
